--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 
     <style>
       body {
+        background: #F2F2F2;
         font-family: -apple-system, BlinkMacSystemFont,
             "Segoe UI", "Roboto", "Oxygen",
             "Ubuntu", "Cantarell", "Fira Sans",
